# cpp-course

./: .gitignore  set.h
bigint/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  big_integer.cpp  big_integer.h  big_integer_testing.vcxproj  big_integer_testing.vcxproj.filters
bigint/big_integer_testing.dir/Debug/big_inte.90E008EF.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+6 more)
bigint_opt/: BIGINT_OPT.sln  CMakeCache.txt  CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp  cmake_install.cmake  data_ptr.cpp  data_ptr.h  data_ptr_testing.cpp
bigint_opt/Debug/: big_integer_testing.ilk
bigint_opt/gtest/: gtest_main.cc
bigint_opt_realizeV1/: data_ptr.cpp
bigint_opt_release/: CMakeLists.txt  big_integer.h  big_integer_testing.cpp
bigint_opt_release/Debug/: big_integer_testing.ilk
bigint_opt_releaseV1/: CMakeCache.txt  cmake_install.cmake
bigint_opt_releaseV2/: BIGINT.sln  CMakeLists.txt  big_integer.h  data_ptr.cpp  data_ptr.h
bigint_opt_releaseV2/Debug/: big_integer_testing.ilk
bigint_opt_releaseV2/gtest/: gtest_main.cc
bigint_opt_releaseV3/: big_integer.cpp  data_ptr.h
bigint_opt_with cmpError/: data_ptr.cpp  data_ptr.h
fixed_vector/: CMakeLists.txt  Makefile  fixed_vector.h  fixed_vector_testing.cpp
fixed_vector/gtest/: gtest-all.cc  gtest.h  gtest_main.cc
huffman/: CMakeLists.txt  HUFFMAN.sln  input.in  main.cpp  new.in  output.hf  output.out  output.txt  t  temp.txt
huffman/gtest/: gtest_main.cc
huffman/tests/: huffman_testing.cpp
persistent_set/: CMakeLists.txt  main.cpp  set.h
(+12 files in other folders)
